parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment SEMICOLON
Rule 5     statement -> if_statement
Rule 6     statement -> block_statement
Rule 7     statement -> print_statement SEMICOLON
Rule 8     assignment -> NAME ASSIGN expression
Rule 9     if_statement -> IF LPAREN expression RPAREN block_statement
Rule 10    if_statement -> IF LPAREN expression RPAREN block_statement ELSE block_statement
Rule 11    block_statement -> LBRACE statements RBRACE
Rule 12    print_statement -> PRINT LPAREN expression RPAREN
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression EQ expression
Rule 18    expression -> expression NE expression
Rule 19    expression -> expression LT expression
Rule 20    expression -> expression LE expression
Rule 21    expression -> expression GT expression
Rule 22    expression -> expression GE expression
Rule 23    expression -> factor
Rule 24    factor -> NUMBER
Rule 25    factor -> NAME
Rule 26    factor -> STRING
Rule 27    factor -> LPAREN expression RPAREN
Rule 28    factor -> MINUS factor

Terminals, with rules where they appear

ASSIGN               : 8
DIVIDE               : 16
ELSE                 : 10
EQ                   : 17
GE                   : 22
GT                   : 21
IF                   : 9 10
LBRACE               : 11
LE                   : 20
LPAREN               : 9 10 12 27
LT                   : 19
MINUS                : 14 28
NAME                 : 8 25
NE                   : 18
NUMBER               : 24
PLUS                 : 13
PRINT                : 12
RBRACE               : 11
RPAREN               : 9 10 12 27
SEMICOLON            : 4 7
STRING               : 26
TIMES                : 15
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 4
block_statement      : 6 9 10 10
expression           : 8 9 10 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 27
factor               : 23 28
if_statement         : 5
print_statement      : 7
program              : 0
statement            : 2 3
statements           : 1 2 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . if_statement
    (6) statement -> . block_statement
    (7) statement -> . print_statement SEMICOLON
    (8) assignment -> . NAME ASSIGN expression
    (9) if_statement -> . IF LPAREN expression RPAREN block_statement
    (10) if_statement -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (11) block_statement -> . LBRACE statements RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    NAME            shift and go to state 8
    IF              shift and go to state 9
    LBRACE          shift and go to state 10
    PRINT           shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    block_statement                shift and go to state 6
    print_statement                shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . if_statement
    (6) statement -> . block_statement
    (7) statement -> . print_statement SEMICOLON
    (8) assignment -> . NAME ASSIGN expression
    (9) if_statement -> . IF LPAREN expression RPAREN block_statement
    (10) if_statement -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (11) block_statement -> . LBRACE statements RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    NAME            shift and go to state 8
    IF              shift and go to state 9
    LBRACE          shift and go to state 10
    PRINT           shift and go to state 11

    statement                      shift and go to state 12
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    block_statement                shift and go to state 6
    print_statement                shift and go to state 7

state 3

    (3) statements -> statement .

    NAME            reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 13


state 5

    (5) statement -> if_statement .

    NAME            reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    LBRACE          reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBRACE          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> block_statement .

    NAME            reduce using rule 6 (statement -> block_statement .)
    IF              reduce using rule 6 (statement -> block_statement .)
    LBRACE          reduce using rule 6 (statement -> block_statement .)
    PRINT           reduce using rule 6 (statement -> block_statement .)
    $end            reduce using rule 6 (statement -> block_statement .)
    RBRACE          reduce using rule 6 (statement -> block_statement .)


state 7

    (7) statement -> print_statement . SEMICOLON

    SEMICOLON       shift and go to state 14


state 8

    (8) assignment -> NAME . ASSIGN expression

    ASSIGN          shift and go to state 15


state 9

    (9) if_statement -> IF . LPAREN expression RPAREN block_statement
    (10) if_statement -> IF . LPAREN expression RPAREN block_statement ELSE block_statement

    LPAREN          shift and go to state 16


state 10

    (11) block_statement -> LBRACE . statements RBRACE
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . if_statement
    (6) statement -> . block_statement
    (7) statement -> . print_statement SEMICOLON
    (8) assignment -> . NAME ASSIGN expression
    (9) if_statement -> . IF LPAREN expression RPAREN block_statement
    (10) if_statement -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (11) block_statement -> . LBRACE statements RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    NAME            shift and go to state 8
    IF              shift and go to state 9
    LBRACE          shift and go to state 10
    PRINT           shift and go to state 11

    statements                     shift and go to state 17
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    block_statement                shift and go to state 6
    print_statement                shift and go to state 7

state 11

    (12) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 18


state 12

    (2) statements -> statements statement .

    NAME            reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    LBRACE          reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 13

    (4) statement -> assignment SEMICOLON .

    NAME            reduce using rule 4 (statement -> assignment SEMICOLON .)
    IF              reduce using rule 4 (statement -> assignment SEMICOLON .)
    LBRACE          reduce using rule 4 (statement -> assignment SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> assignment SEMICOLON .)
    $end            reduce using rule 4 (statement -> assignment SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> assignment SEMICOLON .)


state 14

    (7) statement -> print_statement SEMICOLON .

    NAME            reduce using rule 7 (statement -> print_statement SEMICOLON .)
    IF              reduce using rule 7 (statement -> print_statement SEMICOLON .)
    LBRACE          reduce using rule 7 (statement -> print_statement SEMICOLON .)
    PRINT           reduce using rule 7 (statement -> print_statement SEMICOLON .)
    $end            reduce using rule 7 (statement -> print_statement SEMICOLON .)
    RBRACE          reduce using rule 7 (statement -> print_statement SEMICOLON .)


state 15

    (8) assignment -> NAME ASSIGN . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 20
    factor                         shift and go to state 22

state 16

    (9) if_statement -> IF LPAREN . expression RPAREN block_statement
    (10) if_statement -> IF LPAREN . expression RPAREN block_statement ELSE block_statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 26
    factor                         shift and go to state 22

state 17

    (11) block_statement -> LBRACE statements . RBRACE
    (2) statements -> statements . statement
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . if_statement
    (6) statement -> . block_statement
    (7) statement -> . print_statement SEMICOLON
    (8) assignment -> . NAME ASSIGN expression
    (9) if_statement -> . IF LPAREN expression RPAREN block_statement
    (10) if_statement -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (11) block_statement -> . LBRACE statements RBRACE
    (12) print_statement -> . PRINT LPAREN expression RPAREN

    RBRACE          shift and go to state 27
    NAME            shift and go to state 8
    IF              shift and go to state 9
    LBRACE          shift and go to state 10
    PRINT           shift and go to state 11

    statement                      shift and go to state 12
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    block_statement                shift and go to state 6
    print_statement                shift and go to state 7

state 18

    (12) print_statement -> PRINT LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 28
    factor                         shift and go to state 22

state 19

    (25) factor -> NAME .

    PLUS            reduce using rule 25 (factor -> NAME .)
    MINUS           reduce using rule 25 (factor -> NAME .)
    TIMES           reduce using rule 25 (factor -> NAME .)
    DIVIDE          reduce using rule 25 (factor -> NAME .)
    EQ              reduce using rule 25 (factor -> NAME .)
    NE              reduce using rule 25 (factor -> NAME .)
    LT              reduce using rule 25 (factor -> NAME .)
    LE              reduce using rule 25 (factor -> NAME .)
    GT              reduce using rule 25 (factor -> NAME .)
    GE              reduce using rule 25 (factor -> NAME .)
    SEMICOLON       reduce using rule 25 (factor -> NAME .)
    RPAREN          reduce using rule 25 (factor -> NAME .)


state 20

    (8) assignment -> NAME ASSIGN expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . EQ expression
    (18) expression -> expression . NE expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . GT expression
    (22) expression -> expression . GE expression

    SEMICOLON       reduce using rule 8 (assignment -> NAME ASSIGN expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    LT              shift and go to state 35
    LE              shift and go to state 36
    GT              shift and go to state 37
    GE              shift and go to state 38


state 21

    (28) factor -> MINUS . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    factor                         shift and go to state 39

state 22

    (23) expression -> factor .

    PLUS            reduce using rule 23 (expression -> factor .)
    MINUS           reduce using rule 23 (expression -> factor .)
    TIMES           reduce using rule 23 (expression -> factor .)
    DIVIDE          reduce using rule 23 (expression -> factor .)
    EQ              reduce using rule 23 (expression -> factor .)
    NE              reduce using rule 23 (expression -> factor .)
    LT              reduce using rule 23 (expression -> factor .)
    LE              reduce using rule 23 (expression -> factor .)
    GT              reduce using rule 23 (expression -> factor .)
    GE              reduce using rule 23 (expression -> factor .)
    SEMICOLON       reduce using rule 23 (expression -> factor .)
    RPAREN          reduce using rule 23 (expression -> factor .)


state 23

    (24) factor -> NUMBER .

    PLUS            reduce using rule 24 (factor -> NUMBER .)
    MINUS           reduce using rule 24 (factor -> NUMBER .)
    TIMES           reduce using rule 24 (factor -> NUMBER .)
    DIVIDE          reduce using rule 24 (factor -> NUMBER .)
    EQ              reduce using rule 24 (factor -> NUMBER .)
    NE              reduce using rule 24 (factor -> NUMBER .)
    LT              reduce using rule 24 (factor -> NUMBER .)
    LE              reduce using rule 24 (factor -> NUMBER .)
    GT              reduce using rule 24 (factor -> NUMBER .)
    GE              reduce using rule 24 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 24 (factor -> NUMBER .)
    RPAREN          reduce using rule 24 (factor -> NUMBER .)


state 24

    (26) factor -> STRING .

    PLUS            reduce using rule 26 (factor -> STRING .)
    MINUS           reduce using rule 26 (factor -> STRING .)
    TIMES           reduce using rule 26 (factor -> STRING .)
    DIVIDE          reduce using rule 26 (factor -> STRING .)
    EQ              reduce using rule 26 (factor -> STRING .)
    NE              reduce using rule 26 (factor -> STRING .)
    LT              reduce using rule 26 (factor -> STRING .)
    LE              reduce using rule 26 (factor -> STRING .)
    GT              reduce using rule 26 (factor -> STRING .)
    GE              reduce using rule 26 (factor -> STRING .)
    SEMICOLON       reduce using rule 26 (factor -> STRING .)
    RPAREN          reduce using rule 26 (factor -> STRING .)


state 25

    (27) factor -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 40
    factor                         shift and go to state 22

state 26

    (9) if_statement -> IF LPAREN expression . RPAREN block_statement
    (10) if_statement -> IF LPAREN expression . RPAREN block_statement ELSE block_statement
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . EQ expression
    (18) expression -> expression . NE expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . GT expression
    (22) expression -> expression . GE expression

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    LT              shift and go to state 35
    LE              shift and go to state 36
    GT              shift and go to state 37
    GE              shift and go to state 38


state 27

    (11) block_statement -> LBRACE statements RBRACE .

    NAME            reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    IF              reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    LBRACE          reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    PRINT           reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    $end            reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    RBRACE          reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)
    ELSE            reduce using rule 11 (block_statement -> LBRACE statements RBRACE .)


state 28

    (12) print_statement -> PRINT LPAREN expression . RPAREN
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . EQ expression
    (18) expression -> expression . NE expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . GT expression
    (22) expression -> expression . GE expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    LT              shift and go to state 35
    LE              shift and go to state 36
    GT              shift and go to state 37
    GE              shift and go to state 38


state 29

    (13) expression -> expression PLUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 43
    factor                         shift and go to state 22

state 30

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 44
    factor                         shift and go to state 22

state 31

    (15) expression -> expression TIMES . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 45
    factor                         shift and go to state 22

state 32

    (16) expression -> expression DIVIDE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 46
    factor                         shift and go to state 22

state 33

    (17) expression -> expression EQ . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 47
    factor                         shift and go to state 22

state 34

    (18) expression -> expression NE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 48
    factor                         shift and go to state 22

state 35

    (19) expression -> expression LT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 49
    factor                         shift and go to state 22

state 36

    (20) expression -> expression LE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 50
    factor                         shift and go to state 22

state 37

    (21) expression -> expression GT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 51
    factor                         shift and go to state 22

state 38

    (22) expression -> expression GE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression NE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression GT expression
    (22) expression -> . expression GE expression
    (23) expression -> . factor
    (24) factor -> . NUMBER
    (25) factor -> . NAME
    (26) factor -> . STRING
    (27) factor -> . LPAREN expression RPAREN
    (28) factor -> . MINUS factor

    NUMBER          shift and go to state 23
    NAME            shift and go to state 19
    STRING          shift and go to state 24
    LPAREN          shift and go to state 25
    MINUS           shift and go to state 21

    expression                     shift and go to state 52
    factor                         shift and go to state 22

state 39

    (28) factor -> MINUS factor .

    PLUS            reduce using rule 28 (factor -> MINUS factor .)
    MINUS           reduce using rule 28 (factor -> MINUS factor .)
    TIMES           reduce using rule 28 (factor -> MINUS factor .)
    DIVIDE          reduce using rule 28 (factor -> MINUS factor .)
    EQ              reduce using rule 28 (factor -> MINUS factor .)
    NE              reduce using rule 28 (factor -> MINUS factor .)
    LT              reduce using rule 28 (factor -> MINUS factor .)
    LE              reduce using rule 28 (factor -> MINUS factor .)
    GT              reduce using rule 28 (factor -> MINUS factor .)
    GE              reduce using rule 28 (factor -> MINUS factor .)
    SEMICOLON       reduce using rule 28 (factor -> MINUS factor .)
    RPAREN          reduce using rule 28 (factor -> MINUS factor .)


state 40
